syntax = "proto3";

import "protobuf_test2.proto";

package protobuf.test;

message MyArray {
  repeated uint64 vaf_value_internal = 1;
}
message MyVector {
  repeated uint32 vaf_value_internal = 1;
}
message MyMapEntry {
  uint64 vaf_key_internal = 1;
  protobuf.test.MyString vaf_value_internal = 2;
}
message MyMap {
  repeated MyMapEntry vaf_entry_internal = 1;
}
message MyString {
  string vaf_value_internal = 1;
}
message MyEnum {
  uint32 vaf_value_internal = 1;
}
message MyStruct {
  protobuf.test2.MyStruct MySub1 = 1;
  protobuf.test.MyVector MySub2 = 2;
}
message MyTypeRef {
  uint64 vaf_value_internal = 1;
}
